Add oauth2 and new database connections
