# pokemon/routes/authorization.js
@@ -1,6 +1,13 @@
 const router = require("express").Router();
 const authorizationController = require("../controllers/authorization");
+const { auth, requiresAuth } = require("express-openid-connect");
+const appConfig = require("../config/authorize");
 
-router.get("/login", authorizationController.login);
+// auth router attaches /login, /logout, and /callback routes to the baseURL
+router.use(auth(appConfig));
+// Show logged-in or logged-out status
+router.get("/", authorizationController.authorize);
+// Get profile details from logged-in user
+router.get("/profile", requiresAuth(), authorizationController.profile);
 
 module.exports = router;
